--- a/Prácticas/index.html
+++ b/Prácticas/index.html
@@ -8,6 +8,6 @@
    
 </head>
 <body>
-    <script type="text/javascript"  src="practicaPrimos.js"> </script>
+    <script type="text/javascript"  src="practicaPalindromoAvanzado.js"> </script>
 </body>
 </html>
