--- a/Prácticas/index.html
+++ b/Prácticas/index.html
@@ -8,6 +8,7 @@
    
 </head>
 <body>
-    <script type="text/javascript"  src="practicaCalendario.js"> </script>
+    <button onClick="redireccionar()">Redireccionar a un servidor de mail</button>
+    <script src="practicaVoyATenerSuerte.js"></script>
 </body>
 </html>
