--- a/Prácticas/index.html
+++ b/Prácticas/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     
-    <script src="tripleNumber.js"></script>
+    <script src="practicaNumerosAleatorio.js"></script>
 </body>
 </html>
