--- a/Prácticas/index.html
+++ b/Prácticas/index.html
@@ -8,7 +8,6 @@
    
 </head>
 <body>
-    <button onClick="redireccionar()">Redireccionar a un servidor de mail</button>
-    <script src="practicaVoyATenerSuerte.js"></script>
+    <script src="practicaAhorrandoCodigo.js"></script>
 </body>
 </html>
