--- a/Prácticas/index.html
+++ b/Prácticas/index.html
@@ -8,6 +8,6 @@
    
 </head>
 <body>
-    <script src="practicaLosMayores.js"></script>
+    <script src="practicaTipoConClase.js"></script>
 </body>
 </html>
